[package]
name = "resources"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
webrender = { rev = "b88c0ba7f511e452f2a26e0c0b3ae93a18fd8b1a", git = "https://github.com/servo/webrender" }
failure_derive = "0.1"
lazy_static = "1.0"
image = "0.19.0"
failure = "0.1"