[package]
name = "resources"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
webrender = { rev = "c540acf0990f8a0cbf9429e7085c7cc3b6901add", git = "https://github.com/servo/webrender" }
failure_derive = "0.1"
lazy_static = "1.0"
image = "0.19.0"
failure = "0.1"